# SMAI-demo

./: README.md  pyproject.toml
notebooks/: ansh-75.ipynb  chess-corners.ipynb  chess-piece-detection.ipynb  chess-roboflow-dataset.ipynb  pad-and-warp.ipynb  yolo-train-on-chessrender360-subset.ipynb
smai-demo/: pipeline.py
