[project]
name = "smai-demo"
version = "0.1.0"
description = "Pipeline for the SMAI demo"
# authors = [{ name = "Your name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "shapely>=2.1.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.127",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.7", "ruff>=0.11.2"]

[project.optional-dependencies]
torch-cpu = ["torch>=2.6.0", "torchvision>=0.21.0"]
torch-cu124 = ["torch>=2.6.0", "torchvision>=0.21.0"]

[tool.uv]
conflicts = [[{ extra = "torch-cpu" }, { extra = "torch-cu124" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu124", extra = "torch-cu124" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    { index = "pytorch-cu124", extra = "torch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
